src/App.css
@import '~antd/dist/antd.css';

.App {
  text-align: center;
}

.App-header {
  background-color: #ADD8E6;
  height: 150px;
  padding: 20px;
  color: white;
  margin-bottom: -5px;
}

.NavBar {
  background-color: #ADD8E6;
  height: 40px;
  padding: 0px 20px 20px 20px;
  color: white;
}

.App-title {
  color: white;
  font-size: xx-large;
}

.App-intro {
  font-size: xx-large;
  color: white;
}

img#selfie {
  width: 400px;
  height: 400px
}

img {
  width:100%;
  max-width:400px;
}

.login-form {
  max-width: 300px;
  align: center;
  display: inline-block;
}

.sign-up-form {
  max-width: 300px;
  align: center;
  display: inline-block;
}

.center {
  position: absolute;
  margin: auto;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  text-align: center;
}

.container {
  display: flex;
}

.first-column {
  order: 1;
}

.second-column {
  order: 2;
}

.third-column {
  order: 3;
}

.center-text {
  text-align: center;
}

